another quick alignment fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -42,7 +42,7 @@ a:hover {
 
 .placeholder {
 	position:absolute;
-	top:40%;
+	top:45%;
 	width:100%;
 	line-height:1.8em;
 	text-align:center;
